--- a/DogOrCat/DogOrCat/Views/ResultView.xaml
+++ b/DogOrCat/DogOrCat/Views/ResultView.xaml
@@ -1,10 +1,12 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <ContentPage x:Class="DogOrCat.Views.ResultView"
              xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:converters="clr-namespace:DogOrCat.Converters"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              Title="{Binding Title}"
+             ios:Page.UseSafeArea="true"
              Visual="Material">
     <ContentPage.Resources>
         <converters:BytesToImageConverter x:Key="BytesToMap" />
